# androidx

./: .gitignore  AGENTS.md  OWNERS  PREUPLOAD.cfg  README.md  TAG_OWNERS  gradle.properties  gradlew  libraryversions.toml  settings.gradle  studiow
.agents/: OWNERS  README.md
a2ui/: OWNERS
activity/: OWNERS
appcompat/: OWNERS
appfunctions/: AGENTS.md  local_tests.sh
appsearch/: exportToFramework.py
autofill/: OWNERS
benchmark/: OWNERS
binarycompatibilityvalidator/: OWNERS
biometric/: OWNERS
browser/: OWNERS
buildSrc/: OWNERS  kotlin-dsl-dependency.gradle  metalava-config.xml  repos.gradle  shared-dependencies.gradle  shared.gradle
buildSrc-tests/: lint-baseline.xml
busytown/: androidx.sh  androidx_incremental.sh  androidx_multiplatform_mac_host_tests.sh  androidx_multiplatform_mac_host_tests_arm64.sh
camera/: AGENTS.md
camera/camera-testing/src/main/cpp/: CMakeLists.txt  native_hwbuffer_jni.cpp
cardview/: OWNERS
collection/: OWNERS
compose/: OWNERS
core/: OWNERS
datastore/: AGENTS.md  OWNERS
development/: ktfmt_wrapper.py  publishScan.sh  replayBuildHistory.sh  update_studio.sh
docs/: benchmarking.md  dependencies.md  external-benchmarking.md  macrobenchmarking.md  onboarding.md  reference_documentation.md  team.md  testing.md  truth_guide.md
docs-public/: build.gradle
docs-tip-of-tree/: build.gradle
exifinterface/: OWNERS
fragment/: OWNERS
glance/: OWNERS
gradle/: OWNERS  libs.versions.toml  verification-keyring.keys  verification-metadata.xml
gridlayout/: OWNERS
lifecycle/: OWNERS
lint/: OWNERS
tv/: OWNERS
(+9530 files in other folders)
